--- a/src/_includes/htmlhead.njk
+++ b/src/_includes/htmlhead.njk
@@ -19,12 +19,12 @@
         <meta property="og:url" content="https://www.eveskov.com">
         <meta property="og:description" content="Web and Graphic Design">
         <meta property="og:site_name" content="Evgeni Veskov - UX/UI/Web Desinger">
-        <meta property="og:image" content="https://www.eveskov.com/img/fb-og-1200x630.jpg">
+        <meta property="og:image" content="https://www.eveskov.com/assets/img/fb-og-1200x630.jpg">
         <meta property="og:locale" content="en_GB">
 
         <meta name="twitter:url" content="https://www.eveskov.com">
         <meta name="twitter:title" property="og:title" content="Evgeni Veskov - UX/UI/Web Desinger">
-        <meta name="twitter:image" content="https://www.eveskov.com/img/twitter-card-880x462.jpg">
+        <meta name="twitter:image" content="https://www.eveskov.com/assets/img/twitter-card-880x462.jpg">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@eveskov">
 
