replaced old code for Analytics with Gtag manager

--- a/src/_includes/htmlhead.njk
+++ b/src/_includes/htmlhead.njk
@@ -28,8 +28,20 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@eveskov">
 
-        <!--Google Analytics-->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73208463-1"></script>
         <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-73208463-1');
+        </script>
+
+        <!--Google Analytics-->
+        {# <script>
             (function (i, s, o, g, r, a, m) {
                 i.GoogleAnalyticsObject = r;
                 (i[r] = i[r] || function () {
@@ -47,6 +59,6 @@
 
             ga('create', 'UA-73208463-1', 'auto');
             ga('send', 'pageview');
-        </script>
+        </script> #}
     </head>
     <body>
