--- a/src/_includes/htmlhead.njk
+++ b/src/_includes/htmlhead.njk
@@ -28,6 +28,20 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@eveskov">
 
+        <!-- New code -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RV8K7CWHF8"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'G-RV8K7CWHF8');
+        </script>
+
+        <!-- Old code -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73208463-1"></script>
         <script>
