--- a/src/_includes/htmlhead.njk
+++ b/src/_includes/htmlhead.njk
@@ -7,7 +7,7 @@
         <title>{{ title }}</title>
         <meta name="language" content="en">
         <meta name="description" content="Evgeni Veskov - UX/UI/Web Desinger">
-        <meta name="keywords" content="UX, User Experience, UI, User Interface, Web, Design, Web Design, Graphic Design, HTML, CSS, usability, user-centered design, Sofia">
+        <meta name="keywords" content="UX, UX Design, UX Designer, User Experience Design, User Experience Designer, UI, User Interface Design, Web, Design, Web Design, Web Designer, mobile apps design, usability, user-centered design, human-centered design, Graphic Design, HTML, CSS, SASS, Sofia, Bulgaria, UX дизайн, UX дизайнер, дизайнер, графичен дизайнер, София, България, Шумен, Shumen">
         <meta content="Web presence of Evgeni Veskov - UX/UI/Web Designer" name="description">
         <link rel="stylesheet" href="{{ '/assets/css/styles.css' | url }}">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon.png">
