--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -25,6 +25,8 @@ html {
     // font-size: 1rem;
     background-color: #fff;
     scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    scroll-padding-top: 2rem;
 }
 
 body {
