Added more meta keywords

--- a/src/_includes/htmlhead.njk
+++ b/src/_includes/htmlhead.njk
@@ -7,7 +7,7 @@
         <title>{{ title }}</title>
         <meta name="language" content="en">
         <meta name="description" content="Evgeni Veskov - UX/UI/Web Desinger">
-        <meta name="keywords" content="UX, UX Design, UX Designer, User Experience Design, User Experience Designer, UI, User Interface Design, Web, Design, Web Design, Web Designer, mobile apps design, usability, user-centered design, human-centered design, Graphic Design, HTML, CSS, SASS, Sofia, Bulgaria, UX дизайн, UX дизайнер, дизайнер, графичен дизайнер, София, България, Шумен, Shumen">
+        <meta name="keywords" content="UX, UX Design, UX Designer, UX/UI Designer, UI/UX Designer, Product Designer, Product Design, User Experience Design, User Experience Designer, UI, User Interface Design, Web, Design, Web Design, Web Designer, mobile apps design, usability, user-centered design, human-centered design, user-focused design, UX Designer Sofia Bulgaria, UX/UI Designer Sofia Bulgaria, UI/UX Designer Sofia Bulgaria, Graphic Design, HTML, CSS, SASS, Sofia, Bulgaria, mockups, wireframes, prototypes, user needs, user pain points, UX дизайн, UX дизайнер, дизайнер, дизайнер потребителско изживяване, графичен дизайнер, София, България, Шумен, Shumen">
         <meta content="Web presence of Evgeni Veskov - UX/UI/Web Designer" name="description">
         <link rel="stylesheet" href="{{ '/assets/css/styles.css' | url }}">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon.png">
