OG text changes

--- a/src/_includes/htmlhead.njk
+++ b/src/_includes/htmlhead.njk
@@ -6,9 +6,8 @@
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, user-scalable=1">
         <title>{{ title }}</title>
         <meta name="language" content="en">
-        <meta name="description" content="Evgeni Veskov - UX/UI/Web Desinger">
-        <meta name="keywords" content="UX, UX Design, UX Designer, UX/UI Designer, UI/UX Designer, Product Designer, Product Design, User Experience Design, User Experience Designer, UI, User Interface Design, Web, Design, Web Design, Web Designer, mobile apps design, usability, user-centered design, human-centered design, user-focused design, UX Designer Sofia Bulgaria, UX/UI Designer Sofia Bulgaria, UI/UX Designer Sofia Bulgaria, Graphic Design, HTML, CSS, SASS, Sofia, Bulgaria, mockups, wireframes, prototypes, user needs, user pain points, UX дизайн, UX дизайнер, дизайнер, дизайнер потребителско изживяване, графичен дизайнер, София, България, Шумен, Shumen">
-        <meta content="Web presence of Evgeni Veskov - UX/UI/Web Designer" name="description">
+        <meta name="description" content="Evgeni Veskov - UX/UI/Web Desinger - Portfolio">
+        <meta name="keywords" content="UX, UX Design, UX Designer, UX/UI Designer, UI/UX Designer, Product Designer, Product Design, User Experience Design, User Experience Designer, UI, User Interface Design, Web, Design, Web Design, Web Designer, mobile apps design, usability, user-centered design, human-centered design, user-focused design, UX Designer Sofia Bulgaria, UX/UI Designer Sofia Bulgaria, UI/UX Designer Sofia Bulgaria, Graphic Design, HTML, CSS, SASS, Sofia, Bulgaria, mockups, wireframes, prototypes, user needs, user pain points, portfolio, UX дизайн, UX дизайнер, дизайнер, дизайнер потребителско изживяване, графичен дизайнер, София, България, Шумен, Shumen, портфолио">
         <link rel="stylesheet" href="{{ '/assets/css/styles.css' | url }}">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -17,7 +16,7 @@
         <meta property="og:title" content="Evgeni Veskov - UX/UI/Web Desinger">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.eveskov.com">
-        <meta property="og:description" content="Web and Graphic Design">
+        <meta property="og:description" content="Portfolio of Evgeni Veskov - UX/UI/Web Designer">
         <meta property="og:site_name" content="Evgeni Veskov - UX/UI/Web Desinger">
         <meta property="og:image" content="https://www.eveskov.com/assets/img/fb-og-1200x630.jpg">
         <meta property="og:locale" content="en_GB">
