--- a/src/_includes/htmlhead.njk
+++ b/src/_includes/htmlhead.njk
@@ -73,5 +73,14 @@
             ga('create', 'UA-73208463-1', 'auto');
             ga('send', 'pageview');
         </script> #}
+
+        <!--Microsoft Clarity-->
+        <script type="text/javascript">
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "h6ay9ci2fb");
+        </script>
     </head>
     <body>
