Changed the position of the Gtag script

--- a/src/_includes/htmlhead.njk
+++ b/src/_includes/htmlhead.njk
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+         <!-- New code -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RV8K7CWHF8"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'G-RV8K7CWHF8');
+        </script>
+
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, user-scalable=1">
@@ -27,22 +40,11 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@eveskov">
 
-        <!-- New code -->
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RV8K7CWHF8"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-
-            gtag('config', 'G-RV8K7CWHF8');
-        </script>
+       
 
         <!-- Old code -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73208463-1"></script>
+        {# <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73208463-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
@@ -51,7 +53,7 @@
             gtag('js', new Date());
 
             gtag('config', 'UA-73208463-1');
-        </script>
+        </script> #}
 
         <!--Google Analytics-->
         {# <script>
